--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -174,6 +174,7 @@ certain functionality.
 
 @section extensions
 
+@li @c extensions.abpilot
 @li @c extensions.biblio
 @li @c extensions.dbpilots
 @li @c extensions.plugin
