--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -471,6 +471,7 @@ certain functionality.
 @li @c sw.idle
 @li @c sw.level2
 @li @c sw.mailmerge - Writer mail merge
+@li @c sw.pageframe - debug lifecycle of SwPageFrame
 @li @c sw.rtf - .rtf export filter
 @li @c sw.tiled
 @li @c sw.ui
