--- a/external/poppler/poppler-notests.patch.1
+++ b/external/poppler/poppler-notests.patch.1
@@ -1,11 +1,11 @@
 --- a/Makefile.in
 +++ b/Makefile.in
-@@ -470,7 +470,7 @@ DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --with-testdatadir=$(TESTDATADIR)
+@@ -483,7 +483,7 @@
+ @BUILD_POPPLER_QT4_TRUE@qt4_pc_file = poppler-qt4.pc
  @BUILD_POPPLER_CPP_TRUE@cpp_subdir = cpp
  @BUILD_POPPLER_CPP_TRUE@cpp_pc_file = poppler-cpp.pc
- @BUILD_UTILS_TRUE@utils_subdir = utils
--SUBDIRS = goo fofi $(splash_subdir) poppler $(utils_subdir) $(glib_subdir) test $(qt4_subdir) $(qt5_subdir) $(cpp_subdir)
-+SUBDIRS = goo fofi $(splash_subdir) poppler $(utils_subdir) $(glib_subdir) $(qt4_subdir) $(qt5_subdir) $(cpp_subdir)
+-SUBDIRS = goo fofi $(splash_subdir) poppler utils $(glib_subdir) test $(qt4_subdir) $(qt5_subdir) $(cpp_subdir)
++SUBDIRS = goo fofi $(splash_subdir) poppler utils $(glib_subdir) $(qt4_subdir) $(qt5_subdir) $(cpp_subdir)
  
  # Add CMake buildsystem files here so they get added on make dist
  EXTRA_DIST = README-XPDF poppler.pc.in poppler-uninstalled.pc.in \
