--- a/external/redland/raptor/raptor-mingw.patch.1
+++ b/external/redland/raptor/raptor-mingw.patch.1
@@ -4,10 +4,10 @@ MinGW: libtool falls back to static lib unless -no-undefined given
 +++ b/src/Makefile.in	2013-03-29 20:05:02.140892243 +0100
 @@ -507,7 +507,7 @@
  	$(am__append_21) $(am__append_22) $(am__append_23) \
- 	$(am__append_24) $(am__append_25) $(am__append_26) \
- 	$(am__append_27) $(am__append_28)
+ 	$(am__append_24) $(am__append_25) $(am__append_26)
+ libraptor2_la_LIBADD = $(am__append_29) @LTLIBOBJS@
 -libraptor2_la_LDFLAGS = -version-info @RAPTOR_LIBTOOL_VERSION@ \
 +libraptor2_la_LDFLAGS = -version-info @RAPTOR_LIBTOOL_VERSION@ -no-undefined \
  @RAPTOR_LDFLAGS@ $(MEM_LIBS)
  
- libraptor2_la_LIBADD = @LTLIBOBJS@
+ EXTRA_DIST = \
