tdf#101919: rename ownCloud to Remote server
Change-Id: I217fdc805ce425f8a4a17d0d0e924e532ec070de
Reviewed-on: https://gerrit.libreoffice.org/28983
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>

--- a/android/source/res/values/strings.xml
+++ b/android/source/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="local_file_system">Local file system</string>
     <string name="external_sd_file_system">External SD</string>
     <string name="otg_file_system">OTG device (experimental)</string>
-    <string name="owncloud">ownCloud</string>
+    <string name="owncloud">Remote server</string>
 
     <string name="owncloud_wrong_connection">Cannot connect to ownCloud server. Check your configuration.</string>
     <string name="owncloud_unauthorized">Cannot log into ownCloud server. Check your configuration.</string>
