--- a/external/poppler/poppler-snprintf.patch.1
+++ b/external/poppler/poppler-snprintf.patch.1
@@ -6,7 +6,7 @@
  #include <stdlib.h>
 +#ifdef _WIN32
 +#  ifdef __MINGW32__
-+#    define _SNPRINTF_DLLIMPORT
++#    define LO_SNPRINTF_DLLIMPORT
 +#  endif
 +#  ifdef _MSC_VER
 +#    include <systools/win32/snprintf.h>
@@ -22,7 +22,7 @@
  #  include <shlobj.h>
  #  include <mbstring.h>
 +#  ifdef __MINGW32__
-+#    define _SNPRINTF_DLLIMPORT
++#    define LO_SNPRINTF_DLLIMPORT
 +#  endif
 +#  ifdef _MSC_VER
 +#    include <systools/win32/snprintf.h>
@@ -38,7 +38,7 @@
  #include <assert.h>
 +#ifdef _WIN32
 +#  ifdef __MINGW32__
-+#    define _SNPRINTF_DLLIMPORT
++#    define LO_SNPRINTF_DLLIMPORT
 +#  endif
 +#  ifdef _MSC_VER
 +#    include <systools/win32/snprintf.h>
