--- a/extras/source/autocorr/lang/zh-TW/DocumentList.xml
+++ b/extras/source/autocorr/lang/zh-TW/DocumentList.xml
@@ -813,6 +813,8 @@
   <block-list:block block-list:abbreviated-name="yuor" block-list:name="your"/>
   <block-list:block block-list:abbreviated-name=":旗幟3:" block-list:name="🏁"/>
   <block-list:block block-list:abbreviated-name=":籃球:" block-list:name="🏀"/>
+  <block-list:block block-list:abbreviated-name=":!2:" block-list:name="❗"/>
+  <block-list:block block-list:abbreviated-name=":?2:" block-list:name="❔"/>
   <block-list:block block-list:abbreviated-name=":^alpha:" block-list:name="ᵅ"/>
   <block-list:block block-list:abbreviated-name=":alpha:" block-list:name="α"/>
   <block-list:block block-list:abbreviated-name=":Alpha:" block-list:name="Α"/>
@@ -848,6 +850,11 @@
   <block-list:block block-list:abbreviated-name=":Epsilon:" block-list:name="Ε"/>
   <block-list:block block-list:abbreviated-name=":eta:" block-list:name="η"/>
   <block-list:block block-list:abbreviated-name=":Eta:" block-list:name="Η"/>
+  <block-list:block block-list:abbreviated-name=":ff:" block-list:name="ﬀ"/>
+  <block-list:block block-list:abbreviated-name=":ffi:" block-list:name="ﬃ"/>
+  <block-list:block block-list:abbreviated-name=":ffl:" block-list:name="ﬄ"/>
+  <block-list:block block-list:abbreviated-name=":fi:" block-list:name="ﬁ"/>
+  <block-list:block block-list:abbreviated-name=":fl:" block-list:name="ﬂ"/>
   <block-list:block block-list:abbreviated-name=":^gamma:" block-list:name="ᵞ"/>
   <block-list:block block-list:abbreviated-name=":_gamma:" block-list:name="ᵧ"/>
   <block-list:block block-list:abbreviated-name=":gamma:" block-list:name="γ"/>
@@ -904,6 +911,8 @@
   <block-list:block block-list:abbreviated-name=":upsilon:" block-list:name="υ"/>
   <block-list:block block-list:abbreviated-name=":Upsilon:" block-list:name="Υ"/>
   <block-list:block block-list:abbreviated-name=":_v:" block-list:name="ᵥ"/>
+  <block-list:block block-list:abbreviated-name=":x2:" block-list:name="❌"/>
+  <block-list:block block-list:abbreviated-name=":x3:" block-list:name="❎"/>
   <block-list:block block-list:abbreviated-name=":_x:" block-list:name="ₓ"/>
   <block-list:block block-list:abbreviated-name=":x:" block-list:name="×"/>
   <block-list:block block-list:abbreviated-name=":xi:" block-list:name="ξ"/>
@@ -928,21 +937,42 @@
   <block-list:block block-list:abbreviated-name=":且:" block-list:name="∧"/>
   <block-list:block block-list:abbreviated-name=":中正方形2:" block-list:name="◼"/>
   <block-list:block block-list:abbreviated-name=":中正方形:" block-list:name="◻"/>
+  <block-list:block block-list:abbreviated-name=":中級星:" block-list:name="⭐"/>
   <block-list:block block-list:abbreviated-name=":中黑點:" block-list:name="·"/>
+  <block-list:block block-list:abbreviated-name=":乘號2:" block-list:name="✖"/>
+  <block-list:block block-list:abbreviated-name=":二分音符:" block-list:name="𝅗𝅥"/>
+  <block-list:block block-list:abbreviated-name=":五角形2:" block-list:name="⬟"/>
+  <block-list:block block-list:abbreviated-name=":五角形:" block-list:name="⬠"/>
   <block-list:block block-list:abbreviated-name=":五角星:" block-list:name="⛤"/>
   <block-list:block block-list:abbreviated-name=":交集:" block-list:name="∩"/>
   <block-list:block block-list:abbreviated-name=":作業中:" block-list:name="⛑"/>
+  <block-list:block block-list:abbreviated-name=":信封:" block-list:name="✉"/>
   <block-list:block block-list:abbreviated-name=":信用卡:" block-list:name="💳"/>
+  <block-list:block block-list:abbreviated-name=":傑克:" block-list:name="🂫"/>
   <block-list:block block-list:abbreviated-name=":傘:" block-list:name="☂"/>
   <block-list:block block-list:abbreviated-name=":全部:" block-list:name="∀"/>
+  <block-list:block block-list:abbreviated-name=":全音符:" block-list:name="𝅝"/>
+  <block-list:block block-list:abbreviated-name=":八分音符:" block-list:name="𝅘𝅥𝅮"/>
+  <block-list:block block-list:abbreviated-name=":六角形2:" block-list:name="⬢"/>
+  <block-list:block block-list:abbreviated-name=":六角形:" block-list:name="⬡"/>
   <block-list:block block-list:abbreviated-name=":分(錢):" block-list:name="¢"/>
   <block-list:block block-list:abbreviated-name=":刪節號:" block-list:name="…"/>
+  <block-list:block block-list:abbreviated-name=":剪刀2:" block-list:name="✄"/>
+  <block-list:block block-list:abbreviated-name=":剪刀3:" block-list:name="✁"/>
+  <block-list:block block-list:abbreviated-name=":剪刀4:" block-list:name="✃"/>
+  <block-list:block block-list:abbreviated-name=":剪刀:" block-list:name="✂"/>
   <block-list:block block-list:abbreviated-name=":劍:" block-list:name="⚔"/>
+  <block-list:block block-list:abbreviated-name=":加油站:" block-list:name="⛽"/>
+  <block-list:block block-list:abbreviated-name=":勝利:" block-list:name="✌"/>
+  <block-list:block block-list:abbreviated-name=":勾號2:" block-list:name="✔"/>
+  <block-list:block block-list:abbreviated-name=":勾號3:" block-list:name="✅"/>
+  <block-list:block block-list:abbreviated-name=":勾號:" block-list:name="✓"/>
   <block-list:block block-list:abbreviated-name=":勾選框2:" block-list:name="☑"/>
   <block-list:block block-list:abbreviated-name=":勾選框3:" block-list:name="☒"/>
   <block-list:block block-list:abbreviated-name=":勾選框:" block-list:name="☐"/>
   <block-list:block block-list:abbreviated-name=":包含:" block-list:name="⊃"/>
   <block-list:block block-list:abbreviated-name=":包含於:" block-list:name="⊂"/>
+  <block-list:block block-list:abbreviated-name=":十六分音符:" block-list:name="𝅘𝅥𝅯"/>
   <block-list:block block-list:abbreviated-name=":千分率號:" block-list:name="‰"/>
   <block-list:block block-list:abbreviated-name=":升記號:" block-list:name="♯"/>
   <block-list:block block-list:abbreviated-name=":卡車:" block-list:name="⛟"/>
@@ -959,17 +989,26 @@
   <block-list:block block-list:abbreviated-name=":商標:" block-list:name="™"/>
   <block-list:block block-list:abbreviated-name=":單引撇號:" block-list:name="’"/>
   <block-list:block block-list:abbreviated-name=":噴水池:" block-list:name="⛲"/>
+  <block-list:block block-list:abbreviated-name=":四分音符:" block-list:name="𝅘𝅥"/>
   <block-list:block block-list:abbreviated-name=":四次方根:" block-list:name="∜"/>
+  <block-list:block block-list:abbreviated-name=":國王:" block-list:name="🂮"/>
   <block-list:block block-list:abbreviated-name=":圓形2:" block-list:name="●"/>
   <block-list:block block-list:abbreviated-name=":圓形:" block-list:name="○"/>
   <block-list:block block-list:abbreviated-name=":土耳其里拉:" block-list:name="₺"/>
+  <block-list:block block-list:abbreviated-name=":大圓2:" block-list:name="⬤"/>
   <block-list:block block-list:abbreviated-name=":大圓形:" block-list:name="◯"/>
+  <block-list:block block-list:abbreviated-name=":大正方形2:" block-list:name="⬛"/>
+  <block-list:block block-list:abbreviated-name=":大正方形:" block-list:name="⬜"/>
+  <block-list:block block-list:abbreviated-name=":大衛星:" block-list:name="✡"/>
   <block-list:block block-list:abbreviated-name=":天平:" block-list:name="⚖"/>
   <block-list:block block-list:abbreviated-name=":太陽2:" block-list:name="☼"/>
   <block-list:block block-list:abbreviated-name=":太陽:" block-list:name="☉"/>
   <block-list:block block-list:abbreviated-name=":存在:" block-list:name="∃"/>
+  <block-list:block block-list:abbreviated-name=":寫:" block-list:name="✍"/>
   <block-list:block block-list:abbreviated-name=":小ni:" block-list:name="∍"/>
   <block-list:block block-list:abbreviated-name=":小於:" block-list:name="∊"/>
+  <block-list:block block-list:abbreviated-name=":小星2:" block-list:name="⭑"/>
+  <block-list:block block-list:abbreviated-name=":小星:" block-list:name="⭒"/>
   <block-list:block block-list:abbreviated-name=":小正方形2:" block-list:name="▪"/>
   <block-list:block block-list:abbreviated-name=":小正方形:" block-list:name="▫"/>
   <block-list:block block-list:abbreviated-name=":小節:" block-list:name="§"/>
@@ -987,6 +1026,8 @@
   <block-list:block block-list:abbreviated-name=":左箭2:" block-list:name="⇐"/>
   <block-list:block block-list:abbreviated-name=":左箭:" block-list:name="←"/>
   <block-list:block block-list:abbreviated-name=":帆船:" block-list:name="⛵"/>
+  <block-list:block block-list:abbreviated-name=":希臘式十字2:" block-list:name="✙"/>
+  <block-list:block block-list:abbreviated-name=":希臘式十字:" block-list:name="✚"/>
   <block-list:block block-list:abbreviated-name=":帳篷:" block-list:name="⛺"/>
   <block-list:block block-list:abbreviated-name=":平行:" block-list:name="∥"/>
   <block-list:block block-list:abbreviated-name=":平行四邊形2:" block-list:name="▰"/>
@@ -995,8 +1036,15 @@
   <block-list:block block-list:abbreviated-name=":彗星:" block-list:name="☄"/>
   <block-list:block block-list:abbreviated-name=":微笑2:" block-list:name="☻"/>
   <block-list:block block-list:abbreviated-name=":微笑:" block-list:name="☺"/>
+  <block-list:block block-list:abbreviated-name=":心:" block-list:name="❤"/>
+  <block-list:block block-list:abbreviated-name=":心碎:" block-list:name="💔"/>
+  <block-list:block block-list:abbreviated-name=":心跳:" block-list:name="💓"/>
+  <block-list:block block-list:abbreviated-name=":愛上你:" block-list:name="😍"/>
   <block-list:block block-list:abbreviated-name=":或:" block-list:name="∨"/>
+  <block-list:block block-list:abbreviated-name=":手:" block-list:name="✋"/>
   <block-list:block block-list:abbreviated-name=":披索:" block-list:name="₱"/>
+  <block-list:block block-list:abbreviated-name=":拉丁式十字:" block-list:name="✝"/>
+  <block-list:block block-list:abbreviated-name=":拳頭:" block-list:name="✊"/>
   <block-list:block block-list:abbreviated-name=":教堂:" block-list:name="⛪"/>
   <block-list:block block-list:abbreviated-name=":方塊2:" block-list:name="♢"/>
   <block-list:block block-list:abbreviated-name=":方塊:" block-list:name="♦"/>
@@ -1018,6 +1066,7 @@
   <block-list:block block-list:abbreviated-name=":梅花:" block-list:name="♣"/>
   <block-list:block block-list:abbreviated-name=":梯形:" block-list:name="⏢"/>
   <block-list:block block-list:abbreviated-name=":棺材:" block-list:name="⚰"/>
+  <block-list:block block-list:abbreviated-name=":橢圓:" block-list:name="⬭"/>
   <block-list:block block-list:abbreviated-name=":歐圓:" block-list:name="€"/>
   <block-list:block block-list:abbreviated-name=":歐圓鈔:" block-list:name="💶"/>
   <block-list:block block-list:abbreviated-name=":正方形2:" block-list:name="■"/>
@@ -1032,7 +1081,9 @@
   <block-list:block block-list:abbreviated-name=":溜冰場:" block-list:name="⛸"/>
   <block-list:block block-list:abbreviated-name=":溫泉:" block-list:name="♨"/>
   <block-list:block block-list:abbreviated-name=":滑雪者:" block-list:name="⛷"/>
+  <block-list:block block-list:abbreviated-name=":火花:" block-list:name="❇"/>
   <block-list:block block-list:abbreviated-name=":無限:" block-list:name="∞"/>
+  <block-list:block block-list:abbreviated-name=":王后:" block-list:name="🂭"/>
   <block-list:block block-list:abbreviated-name=":生化危險:" block-list:name="☣"/>
   <block-list:block block-list:abbreviated-name=":男性:" block-list:name="♂"/>
   <block-list:block block-list:abbreviated-name=":白主教:" block-list:name="♗"/>
@@ -1040,8 +1091,9 @@
   <block-list:block block-list:abbreviated-name=":白圓:" block-list:name="⚪"/>
   <block-list:block block-list:abbreviated-name=":白城堡:" block-list:name="♖"/>
   <block-list:block block-list:abbreviated-name=":白士兵:" block-list:name="♙"/>
-  <block-list:block block-list:abbreviated-name=":白皇后:" block-list:name="♕"/>
+  <block-list:block block-list:abbreviated-name=":白王后:" block-list:name="♕"/>
   <block-list:block block-list:abbreviated-name=":白騎士:" block-list:name="♘"/>
+  <block-list:block block-list:abbreviated-name=":監管鏈:" block-list:name="⛓"/>
   <block-list:block block-list:abbreviated-name=":盧比:" block-list:name="₹"/>
   <block-list:block block-list:abbreviated-name=":直角三角形:" block-list:name="⊿"/>
   <block-list:block block-list:abbreviated-name=":短劍2:" block-list:name="‡"/>
@@ -1056,6 +1108,10 @@
   <block-list:block block-list:abbreviated-name=":積分:" block-list:name="∫"/>
   <block-list:block block-list:abbreviated-name=":空集合:" block-list:name="∅"/>
   <block-list:block block-list:abbreviated-name=":立方根:" block-list:name="∛"/>
+  <block-list:block block-list:abbreviated-name=":筆尖2:" block-list:name="✒"/>
+  <block-list:block block-list:abbreviated-name=":筆尖:" block-list:name="✑"/>
+  <block-list:block block-list:abbreviated-name=":筆記本2:" block-list:name="📔"/>
+  <block-list:block block-list:abbreviated-name=":筆記本:" block-list:name="📓"/>
   <block-list:block block-list:abbreviated-name=":籃球:" block-list:name="⚾"/>
   <block-list:block block-list:abbreviated-name=":紅心2:" block-list:name="♡"/>
   <block-list:block block-list:abbreviated-name=":紅心:" block-list:name="♥"/>
@@ -1070,21 +1126,28 @@
   <block-list:block block-list:abbreviated-name=":菱形:" block-list:name="◊"/>
   <block-list:block block-list:abbreviated-name=":萬分率號:" block-list:name="‱"/>
   <block-list:block block-list:abbreviated-name=":著作權:" block-list:name="©"/>
+  <block-list:block block-list:abbreviated-name=":蛇夫座:" block-list:name="⛎"/>
   <block-list:block block-list:abbreviated-name=":蛇杖:" block-list:name="☤"/>
   <block-list:block block-list:abbreviated-name=":角2:" block-list:name="∡"/>
   <block-list:block block-list:abbreviated-name=":角:" block-list:name="∠"/>
   <block-list:block block-list:abbreviated-name=":註冊商標:" block-list:name="®"/>
   <block-list:block block-list:abbreviated-name=":證明結束:" block-list:name="∎"/>
   <block-list:block block-list:abbreviated-name=":警告:" block-list:name="⚠"/>
+  <block-list:block block-list:abbreviated-name=":貓愛上你:" block-list:name="😻"/>
   <block-list:block block-list:abbreviated-name=":資訊:" block-list:name="ℹ"/>
   <block-list:block block-list:abbreviated-name=":足球:" block-list:name="⚽"/>
   <block-list:block block-list:abbreviated-name=":路滑:" block-list:name="⛐"/>
   <block-list:block block-list:abbreviated-name=":輪椅:" block-list:name="♿"/>
   <block-list:block block-list:abbreviated-name=":輻射性:" block-list:name="☢"/>
+  <block-list:block block-list:abbreviated-name=":迴圈2:" block-list:name="➿"/>
+  <block-list:block block-list:abbreviated-name=":迴圈:" block-list:name="➰"/>
   <block-list:block block-list:abbreviated-name=":還原號:" block-list:name="♮"/>
   <block-list:block block-list:abbreviated-name=":部份:" block-list:name="∂"/>
   <block-list:block block-list:abbreviated-name=":醫院:" block-list:name="⛨"/>
   <block-list:block block-list:abbreviated-name=":里拉:" block-list:name="₤"/>
+  <block-list:block block-list:abbreviated-name=":鉛筆2:" block-list:name="✏"/>
+  <block-list:block block-list:abbreviated-name=":鉛筆3:" block-list:name="✐"/>
+  <block-list:block block-list:abbreviated-name=":鉛筆:" block-list:name="✎"/>
   <block-list:block block-list:abbreviated-name=":錨:" block-list:name="⚓"/>
   <block-list:block block-list:abbreviated-name=":錶:" block-list:name="⌚"/>
   <block-list:block block-list:abbreviated-name=":鍵盤:" block-list:name="⌨"/>
@@ -1092,10 +1155,12 @@
   <block-list:block block-list:abbreviated-name=":長方形2:" block-list:name="▬"/>
   <block-list:block block-list:abbreviated-name=":長方形:" block-list:name="▭"/>
   <block-list:block block-list:abbreviated-name=":長破折號:" block-list:name="—"/>
+  <block-list:block block-list:abbreviated-name=":閃耀:" block-list:name="✨"/>
   <block-list:block block-list:abbreviated-name=":閃電:" block-list:name="☇"/>
   <block-list:block block-list:abbreviated-name=":降記號:" block-list:name="♭"/>
   <block-list:block block-list:abbreviated-name=":除:" block-list:name="∣"/>
   <block-list:block block-list:abbreviated-name=":陰陽:" block-list:name="☯"/>
+  <block-list:block block-list:abbreviated-name=":雙心:" block-list:name="💕"/>
   <block-list:block block-list:abbreviated-name=":雙音符2:" block-list:name="♬"/>
   <block-list:block block-list:abbreviated-name=":雙音符:" block-list:name="♫"/>
   <block-list:block block-list:abbreviated-name=":離婚:" block-list:name="⚮"/>
@@ -1103,6 +1168,7 @@
   <block-list:block block-list:abbreviated-name=":雨:" block-list:name="☔"/>
   <block-list:block block-list:abbreviated-name=":雪人2:" block-list:name="⛄"/>
   <block-list:block block-list:abbreviated-name=":雪人:" block-list:name="☃"/>
+  <block-list:block block-list:abbreviated-name=":雪花:" block-list:name="❄"/>
   <block-list:block block-list:abbreviated-name=":雲2:" block-list:name="⛅"/>
   <block-list:block block-list:abbreviated-name=":雲3:" block-list:name="⛈"/>
   <block-list:block block-list:abbreviated-name=":雲:" block-list:name="☁"/>
@@ -1115,6 +1181,8 @@
   <block-list:block block-list:abbreviated-name=":項目符號2:" block-list:name="‣"/>
   <block-list:block block-list:abbreviated-name=":項目符號3:" block-list:name="◦"/>
   <block-list:block block-list:abbreviated-name=":項目符號:" block-list:name="•"/>
+  <block-list:block block-list:abbreviated-name=":飛機:" block-list:name="✈"/>
+  <block-list:block block-list:abbreviated-name=":馬爾他十字:" block-list:name="✠"/>
   <block-list:block block-list:abbreviated-name=":骨灰甕:" block-list:name="⚱"/>
   <block-list:block block-list:abbreviated-name=":骰1:" block-list:name="⚀"/>
   <block-list:block block-list:abbreviated-name=":骰2:" block-list:name="⚁"/>
@@ -1132,7 +1200,7 @@
   <block-list:block block-list:abbreviated-name=":黑士兵:" block-list:name="♟"/>
   <block-list:block block-list:abbreviated-name=":黑桃2:" block-list:name="♤"/>
   <block-list:block block-list:abbreviated-name=":黑桃:" block-list:name="♠"/>
-  <block-list:block block-list:abbreviated-name=":黑皇后:" block-list:name="♛"/>
+  <block-list:block block-list:abbreviated-name=":黑王后:" block-list:name="♛"/>
   <block-list:block block-list:abbreviated-name=":黑騎士:" block-list:name="♞"/>
   <block-list:block block-list:abbreviated-name=":齒輪:" block-list:name="⚙"/>
 </block-list:block-list>
