clang-cl loplugin: dtrans
Change-Id: I1d55f3e7ecbde486f318d5175b1570f0caa33255
Reviewed-on: https://gerrit.libreoffice.org/29870
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -545,6 +545,7 @@ certain functionality.
 @li @c cppcanvas
 @li @c cppcanvas.emf
 @li @c drawinglayer
+@li @c dtrans
 @li @c helpcompiler
 @li @c jvmaccess
 @li @c lingucomponent
