--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -89,6 +89,7 @@ certain functionality.
 @section comphelper
 
 @li @c comphelper
+@li @c comphelper.backupfilehelper
 @li @c comphelper.container - EmbeddedObjectContainer
 
 @section cppu
